--- a/cx.html
+++ b/cx.html
@@ -1983,7 +1983,7 @@ In progress : moving some of the non core procs to module cxutils.nim
 
 Latest      : changed time date related code to work with newest times.nim
               
-              added more procs for truecolor support
+              added more procs for truecolor support see cxPrint etc.
 
 
 Funding     : Here are the options :
@@ -4579,7 +4579,7 @@ zipWith<pre class="listing"><span class="Keyword">var</span> <span class="Identi
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small>Made with Nim. Generated: 2018-01-21 22:57:28 UTC</small>
+        <small>Made with Nim. Generated: 2018-01-22 12:57:52 UTC</small>
       </div>
     </div>
   </div>
