--- a/cxutils.html
+++ b/cxutils.html
@@ -1336,7 +1336,7 @@ function main() {
   <li><a class="reference" href="#showRandomCard,int"
     title="showRandomCard(xpos: int = centerX())"><wbr />show<wbr />Random<wbr />Card<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#showRuler,int,int,int,string,BackgroundColor,bool"
-    title="showRuler(xpos: int = 0; xposE: int = 0; ypos: int = 0; fgr: string = termwhite;
+    title="showRuler(xpos: int = 0; xposE: int = 0; ypos: int = 0; fgr: string = white;
           bgr: BackgroundColor = bgBlack; vert: bool = false)"><wbr />show<wbr />Ruler<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#centerMark,bool"
     title="centerMark(showpos: bool = false)"><wbr />center<wbr />Mark<span class="attachedType" style="visibility:hidden"></span></a></li>
@@ -1708,7 +1708,7 @@ getNextMonday<pre class="listing"><span class="Identifier">echo</span>  <span cl
 
 
 </dd>
-<dt id="showRuler"><a name="showRuler,int,int,int,string,BackgroundColor,bool"></a><pre><span class="Keyword">proc</span> <span class="Identifier">showRuler</span><span class="Other">(</span><span class="Identifier">xpos</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="DecNumber">0</span><span class="Other">;</span> <span class="Identifier">xposE</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="DecNumber">0</span><span class="Other">;</span> <span class="Identifier">ypos</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="DecNumber">0</span><span class="Other">;</span> <span class="Identifier">fgr</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="Identifier">termwhite</span><span class="Other">;</span>
+<dt id="showRuler"><a name="showRuler,int,int,int,string,BackgroundColor,bool"></a><pre><span class="Keyword">proc</span> <span class="Identifier">showRuler</span><span class="Other">(</span><span class="Identifier">xpos</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="DecNumber">0</span><span class="Other">;</span> <span class="Identifier">xposE</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="DecNumber">0</span><span class="Other">;</span> <span class="Identifier">ypos</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="DecNumber">0</span><span class="Other">;</span> <span class="Identifier">fgr</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="Identifier">white</span><span class="Other">;</span>
               <span class="Identifier">bgr</span><span class="Other">:</span> <span class="Identifier">BackgroundColor</span> <span class="Other">=</span> <span class="Identifier">bgBlack</span><span class="Other">;</span> <span class="Identifier">vert</span><span class="Other">:</span> <span class="Identifier">bool</span> <span class="Other">=</span> <span class="Identifier">false</span><span class="Other">)</span> <span class="Other pragmabegin">{.</span><div class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></div><span class="Other pragmaend">.}</span></pre></dt>
 <dd>
 <p>ruler</p>
@@ -1920,7 +1920,7 @@ getWanIp<pre class="listing"><span class="Identifier">printLnBiCol</span><span c
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small>Made with Nim. Generated: 2018-01-31 15:21:17 UTC</small>
+        <small>Made with Nim. Generated: 2018-02-01 09:32:21 UTC</small>
       </div>
     </div>
   </div>
