--- a/cxutils.html
+++ b/cxutils.html
@@ -1419,7 +1419,7 @@ Project     : https://github.com/qqtop/NimCx
 
 Docs        : https://qqtop.github.io/cxutils.html
 
-Tested      : OpenSuse Tumbleweed</pre>
+Tested      : OpenSuse Tumbleweed ,Debian Testing</pre>
 </p>
   <div class="section" id="9">
 <h1><a class="toc-backref" href="#9">Lets</a></h1>
@@ -1920,7 +1920,7 @@ getWanIp<pre class="listing"><span class="Identifier">printLnBiCol</span><span c
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small>Made with Nim. Generated: 2018-02-01 09:32:21 UTC</small>
+        <small>Made with Nim. Generated: 2018-02-01 10:13:34 UTC</small>
       </div>
     </div>
   </div>
