--- a/cxconsts.html
+++ b/cxconsts.html
@@ -1381,6 +1381,20 @@ function main() {
     title="bbrightmagenta = &quot;\e[105m&quot;"><wbr />bbrightmagenta<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#bbrightblack"
     title="bbrightblack = &quot;\e[100m&quot;"><wbr />bbrightblack<span class="attachedType" style="visibility:hidden"></span></a></li>
+  <li><a class="reference" href="#termClear"
+    title="termClear = &quot;\e[0m&quot;"><wbr />term<wbr />Clear<span class="attachedType" style="visibility:hidden"></span></a></li>
+  <li><a class="reference" href="#termBold"
+    title="termBold = &quot;\e[1m&quot;"><wbr />term<wbr />Bold<span class="attachedType" style="visibility:hidden"></span></a></li>
+  <li><a class="reference" href="#termItalic"
+    title="termItalic = &quot;\e[3m&quot;"><wbr />term<wbr />Italic<span class="attachedType" style="visibility:hidden"></span></a></li>
+  <li><a class="reference" href="#termUnderline"
+    title="termUnderline = &quot;\e[4m&quot;"><wbr />term<wbr />Underline<span class="attachedType" style="visibility:hidden"></span></a></li>
+  <li><a class="reference" href="#termBlink"
+    title="termBlink = &quot;\e[5m&quot;"><wbr />term<wbr />Blink<span class="attachedType" style="visibility:hidden"></span></a></li>
+  <li><a class="reference" href="#termNegative"
+    title="termNegative = &quot;\e[7m&quot;"><wbr />term<wbr />Negative<span class="attachedType" style="visibility:hidden"></span></a></li>
+  <li><a class="reference" href="#termStrikethrough"
+    title="termStrikethrough = &quot;\e[9m&quot;"><wbr />term<wbr />Strikethrough<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#pastelgreen"
     title="pastelgreen = &quot;\e[38;2;179;226;205m&quot;"><wbr />pastelgreen<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#pastelorange"
@@ -2599,6 +2613,41 @@ reset colors
 
 </dd>
 <dt id="bbrightblack"><a name="bbrightblack"></a><pre><span class="Identifier">bbrightblack</span> <span class="Other">=</span> <span class="StringLit">&quot;\e[100m&quot;</span></pre></dt>
+<dd>
+
+
+</dd>
+<dt id="termClear"><a name="termClear"></a><pre><span class="Identifier">termClear</span> <span class="Other">=</span> <span class="StringLit">&quot;\e[0m&quot;</span></pre></dt>
+<dd>
+
+
+</dd>
+<dt id="termBold"><a name="termBold"></a><pre><span class="Identifier">termBold</span> <span class="Other">=</span> <span class="StringLit">&quot;\e[1m&quot;</span></pre></dt>
+<dd>
+
+
+</dd>
+<dt id="termItalic"><a name="termItalic"></a><pre><span class="Identifier">termItalic</span> <span class="Other">=</span> <span class="StringLit">&quot;\e[3m&quot;</span></pre></dt>
+<dd>
+
+
+</dd>
+<dt id="termUnderline"><a name="termUnderline"></a><pre><span class="Identifier">termUnderline</span> <span class="Other">=</span> <span class="StringLit">&quot;\e[4m&quot;</span></pre></dt>
+<dd>
+
+
+</dd>
+<dt id="termBlink"><a name="termBlink"></a><pre><span class="Identifier">termBlink</span> <span class="Other">=</span> <span class="StringLit">&quot;\e[5m&quot;</span></pre></dt>
+<dd>
+
+
+</dd>
+<dt id="termNegative"><a name="termNegative"></a><pre><span class="Identifier">termNegative</span> <span class="Other">=</span> <span class="StringLit">&quot;\e[7m&quot;</span></pre></dt>
+<dd>
+
+
+</dd>
+<dt id="termStrikethrough"><a name="termStrikethrough"></a><pre><span class="Identifier">termStrikethrough</span> <span class="Other">=</span> <span class="StringLit">&quot;\e[9m&quot;</span></pre></dt>
 <dd>
 
 
@@ -4229,7 +4278,7 @@ index into cxcolorNames
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small>Made with Nim. Generated: 2018-02-01 11:27:14 UTC</small>
+        <small>Made with Nim. Generated: 2018-02-08 22:42:12 UTC</small>
       </div>
     </div>
   </div>
