--- a/cxnetwork.html
+++ b/cxnetwork.html
@@ -1259,6 +1259,8 @@ function main() {
     title="showHosts(dm: string)"><wbr />show<wbr />Hosts<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#pingy,string,int,string"
     title="pingy(dest: string; pingcc: int = 3; col: string = termwhite)"><wbr />pingy<span class="attachedType" style="visibility:hidden"></span></a></li>
+  <li><a class="reference" href="#cxPortCheck,string"
+    title="cxPortCheck(cmd: string = &quot;lsof -i&quot;)"><wbr />cx<wbr />Port<wbr />Check<span class="attachedType" style="visibility:hidden"></span></a></li>
 
   </ul>
 </li>
@@ -1363,6 +1365,16 @@ function main() {
 <span class="Identifier">pingy</span><span class="Punctuation">(</span><span class="StringLit">&quot;google.com&quot;</span><span class="Punctuation">,</span><span class="DecNumber">8</span><span class="Punctuation">,</span><span class="Identifier">aqua</span><span class="Punctuation">)</span></pre>
 
 </dd>
+<dt id="cxPortCheck"><a name="cxPortCheck,string"></a><pre><span class="Keyword">proc</span> <span class="Identifier">cxPortCheck</span><span class="Other">(</span><span class="Identifier">cmd</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="StringLit">&quot;lsof -i&quot;</span><span class="Other">)</span> <span class="Other pragmabegin">{.</span><div class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">AssertionError</span><span class="Other">,</span> <span class="Identifier">IOError</span><span class="Other">,</span> <span class="Identifier">KeyError</span><span class="Other">,</span>
+    <span class="Identifier">Exception</span><span class="Other">,</span> <span class="Identifier">ValueError</span><span class="Other">,</span> <span class="Identifier">OverflowError</span><span class="Other">,</span> <span class="Identifier">OSError</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">WriteIOEffect</span><span class="Other">,</span> <span class="Identifier">RootEffect</span><span class="Other">,</span>
+    <span class="Identifier">ReadIOEffect</span><span class="Other">,</span> <span class="Identifier">ExecIOEffect</span><span class="Other">]</span></div><span class="Other pragmaend">.}</span></pre></dt>
+<dd>
+<p>cxPortCheck</p>
+<p>runs a linux system command to see what the ports are listening to</p>
+<p>if no or partial output at all run your program with sudo </p>
+
+
+</dd>
 
 </dl></div>
 
@@ -1373,7 +1385,7 @@ function main() {
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small>Made with Nim. Generated: 2018-02-28 15:52:31 UTC</small>
+        <small>Made with Nim. Generated: 2018-03-05 17:19:22 UTC</small>
       </div>
     </div>
   </div>
