--- a/cxglobal.html
+++ b/cxglobal.html
@@ -192,10 +192,10 @@ dd > pre {
   table-layout: fixed; }
 
 /* Nim search input */
-div#searchInput {
+div#searchInputDiv {
   margin-bottom: 8px;
 }
-div#searchInput input#searchInput {
+div#searchInputDiv input#searchInput {
   width: 10em;
 }
 div.search-groupby {
@@ -1143,7 +1143,7 @@ dt pre > span.Identifier ~ span.Identifier, dt pre > span.Operator ~ span.Identi
   color: inherit;
   font-weight: inherit; }
 
-dt pre > span.Operator ~ span.Identifier, dt pre > span.Operator ~ span.Operator {
+dt pre > span.Operator ~ span.Identifier {
   color: inherit;
   font-weight: inherit; }
 
@@ -1220,7 +1220,7 @@ function main() {
     <ul class="simple">
     </ul>
   </div>
-  <div id="searchInput">
+  <div id="searchInputDiv">
     Search: <input type="text" id="searchInput"
       onkeyup="search()" />
   </div>
@@ -1443,8 +1443,6 @@ function main() {
     title="currentLine()"><wbr />current<wbr />Line<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#hdx.t,typed,string,int,int"
     title="hdx(code: typed; frm: string = &quot;+&quot;; width: int = tw; nxpos: int = 0): typed"><wbr />hdx<span class="attachedType" style="visibility:hidden"></span></a></li>
-  <li><a class="reference" href="#doByeBye.t,"
-    title="doByeBye()"><wbr />do<wbr />Bye<wbr />Bye<span class="attachedType" style="visibility:hidden"></span></a></li>
 
   </ul>
 </li>
@@ -1463,13 +1461,13 @@ Status      : stable
 
 License     : MIT opensource
 
-Latest      : 2018-03-04
+Latest      : 2018-03-06
 
 Compiler    : Nim &gt;= 0.18.x dev branch
 
 OS          : Linux
 
-Description : provides many utility functions required by other modules</pre>
+Description : provides many basic utility functions required by other modules</pre>
 </p>
   <div class="section" id="6">
 <h1><a class="toc-backref" href="#6">Imports</a></h1>
@@ -2198,13 +2196,6 @@ returns a colorpalette which can be used to iterate over</pre>
 <pre class="listing"><span class="Identifier">hdx</span><span class="Punctuation">(</span><span class="Identifier">printLn</span><span class="Punctuation">(</span><span class="StringLit">&quot;Nice things happen randomly&quot;</span><span class="Punctuation">,</span><span class="Identifier">yellowgreen</span><span class="Punctuation">,</span><span class="Identifier">xpos</span> <span class="Operator">=</span> <span class="DecNumber">9</span><span class="Punctuation">)</span><span class="Punctuation">,</span><span class="Identifier">width</span> <span class="Operator">=</span> <span class="DecNumber">35</span><span class="Punctuation">,</span><span class="Identifier">nxpos</span> <span class="Operator">=</span> <span class="DecNumber">5</span><span class="Punctuation">)</span></pre>
 
 </dd>
-<dt id="doByeBye"><a name="doByeBye.t,"></a><pre><span class="Keyword">template</span> <span class="Identifier">doByeBye</span><span class="Other">(</span><span class="Other">)</span></pre></dt>
-<dd>
-<p>doByeBye</p>
-<p>a simple end program routine do give some feedback when exiting </p>
-
-
-</dd>
 
 </dl></div>
 
@@ -2215,7 +2206,7 @@ returns a colorpalette which can be used to iterate over</pre>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small>Made with Nim. Generated: 2018-03-05 21:09:22 UTC</small>
+        <small>Made with Nim. Generated: 2018-03-06 21:49:43 UTC</small>
       </div>
     </div>
   </div>
