--- a/cxtruecolor.html
+++ b/cxtruecolor.html
@@ -192,10 +192,10 @@ dd > pre {
   table-layout: fixed; }
 
 /* Nim search input */
-div#searchInput {
+div#searchInputDiv {
   margin-bottom: 8px;
 }
-div#searchInput input#searchInput {
+div#searchInputDiv input#searchInput {
   width: 10em;
 }
 div.search-groupby {
@@ -1143,7 +1143,7 @@ dt pre > span.Identifier ~ span.Identifier, dt pre > span.Operator ~ span.Identi
   color: inherit;
   font-weight: inherit; }
 
-dt pre > span.Operator ~ span.Identifier, dt pre > span.Operator ~ span.Operator {
+dt pre > span.Operator ~ span.Identifier {
   color: inherit;
   font-weight: inherit; }
 
@@ -1220,7 +1220,7 @@ function main() {
     <ul class="simple">
     </ul>
   </div>
-  <div id="searchInput">
+  <div id="searchInputDiv">
     Search: <input type="text" id="searchInput"
       onkeyup="search()" />
   </div>
@@ -1265,6 +1265,8 @@ function main() {
     title="color3848(cxTrueCol: seq[string]): int"><wbr />color3848<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#rndTrueCol,"
     title="rndTrueCol(): auto"><wbr />rnd<wbr />True<wbr />Col<span class="attachedType" style="visibility:hidden"></span></a></li>
+  <li><a class="reference" href="#rndTrueCol2,"
+    title="rndTrueCol2(): auto"><wbr />rnd<wbr />True<wbr />Col2<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#rndTrueColFull,"
     title="rndTrueColFull(): auto"><wbr />rnd<wbr />True<wbr />Col<wbr />Full<span class="attachedType" style="visibility:hidden"></span></a></li>
 
@@ -1342,6 +1344,13 @@ function main() {
 
 
 </dd>
+<dt id="rndTrueCol2"><a name="rndTrueCol2,"></a><pre><span class="Keyword">proc</span> <span class="Identifier">rndTrueCol2</span><span class="Other">(</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">auto</span> <span class="Other pragmabegin">{.</span><div class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></div><span class="Other pragmaend">.}</span></pre></dt>
+<dd>
+<p>rndTrueCol2</p>
+<p>returns a  color from the cxtruecolorset for use as background color in var. print functions </p>
+
+
+</dd>
 <dt id="rndTrueColFull"><a name="rndTrueColFull,"></a><pre><span class="Keyword">proc</span> <span class="Identifier">rndTrueColFull</span><span class="Other">(</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">auto</span> <span class="Other pragmabegin">{.</span><div class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></div><span class="Other pragmaend">.}</span></pre></dt>
 <dd>
 <p>rndTrueCol</p>
@@ -1359,7 +1368,7 @@ function main() {
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small>Made with Nim. Generated: 2018-03-05 21:09:27 UTC</small>
+        <small>Made with Nim. Generated: 2018-03-06 21:49:48 UTC</small>
       </div>
     </div>
   </div>
